Small fixes to whitespace + corrected filter API URL for the Burger Menu.

--- a/ladyfingers.css
+++ b/ladyfingers.css
@@ -1,15 +1,15 @@
 *{margin:0;padding:0;background:none;} /* Reset margin/padding for better cross-browser compatibility */
-h1,h2,h3,h4,h5,h6,p {padding:1em 0 0 0;} /* Using Padding instead of Margin avoids added whitespace on parent elements */
+h1,h2,h3,h4,h5,h6,p {padding:0 0 0 0;} /* Using Padding instead of Margin avoids added whitespace on parent elements */
 body {font-size:18px;min-width:300px;}
 p {padding: 1em 1.5em;max-width:1080px;width:100%;margin:1em auto;}
-article {
-  min-height:300px;
+article section section{
+  padding: 5em 0;
 }
 section p {
   padding: 1em 1.5em;
 }
 section h2 {
-  padding: 1em 1em;
+  padding: 0 1em;
 }
 #site_footer {
   background:#E2E2E2; /* Placeholder color */
@@ -22,7 +22,7 @@ section h2 {
 #site_header .headingWrap {
   z-index:2;
   position:absolute;
-  top:40%;left:0;
+  top:40%;left:auto;
   width:100%;
 }
 #site_header .headingWrap h1 {
@@ -38,6 +38,7 @@ section h2 {
   max-height:100vh;
   overflow:hidden;
 }
+/*************************** burger Menu ***************************/
 #burgerMenu {
   position:absolute;
   top:1em;
@@ -51,6 +52,10 @@ section h2 {
 }
 #burgerMenu button {border:0;font-size:3em;color:#fff;display:block;margin:0 auto 1em;}
 #burgerMenu button:hover {color:#ff0000;}
+#burgerMenu ol {list-style-type:none;}
+#burgerMenu a {font-size:2em;color:#fff;}
+
+
 #jaegersborggade_img {
   position:relative;
   background-size:contain;
@@ -88,7 +93,7 @@ section h2 {
   flex-basis:200px;
 }
 #site_footer p, #site_footer h2 {
-  margin:0;padding:1em 0 0; /* Overwrite declerations from before in the CSS */
+  margin:0;padding:0 0 0; /* Overwrite declerations from before in the CSS */
 }
 
 
@@ -101,13 +106,13 @@ h1 {
 }
 
 h2 {
-    font-size: 48px;
+    font-size: 2.5em;
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
 }
 
 h3 {
-    font-size: 19px;
+    font-size: 1em;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
 }
@@ -117,7 +122,7 @@ h4 {
 }
 
 p {
-    font-size: 19px;
+    font-size: 1em;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -132,7 +137,7 @@ a {
 
 #ladyfingers_forside {
     background: #ffffff;
-    padding: 100px 0px;
+    padding: 5em 0px;
 }
 
 #ladyfingers_forside img {
@@ -151,7 +156,6 @@ a {
 
 #ladyfingers_forside .ladyfingers_text {
     grid-column: 9/12;
-    margin-top: 100px;
 }
 
 #ladyfingers_forside a {
@@ -167,7 +171,7 @@ a {
 /*************************** instagram ***************************/
 
 #instagram_main {
-    padding: 100px 0px;
+    padding: 5em 0px;
 }
 
 #instagram_main .text {
@@ -186,7 +190,7 @@ a {
 
 #unik_personlig {
     background: #fcfbf4;
-    padding: 100px 0px;
+    padding: 5em 0;
 }
 
 #unik_personlig img {
@@ -225,7 +229,7 @@ a {
 
 #special_smykker {
     background: #d2af91;
-    padding: 100px 0px;
+    padding: 5em 0;
 }
 
 #special_smykker img {
@@ -258,7 +262,7 @@ a {
 
 #gaden {
     background: #ffffff;
-    padding: 100px 0px;
+    padding: 5em 0px;
 }
 
 #gaden .wrapper {
